# sample_django_gunicorn_uvicorn_server

./: README.md  manage.py  pyproject.toml
sample_django_gunicorn_uvicorn_server/: asgi.py  settings.py  urls.py  wsgi.py
uvicorn_bug/: apps.py
