[tool.poetry]
name = "sample_django_gunicorn_uvicorn_server"
version = "0.1.0"
description = "Sample project"
authors = ["Joseph Lim <josephlim_94@hotmail.co.uk>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.6"
djangorestframework = "^3.12.2"
Markdown = "^3.3.3"
django-filter = "^2.4.0"
shortuuid = "^1.0.1"
requests = "^2.25.1"
django-environ = "^0.4.5"
psycopg2 = "^2.8.6"
whitenoise = "^5.2.0"
factory-boy = "^3.2.0"
Sphinx = "^3.5.1"
sphinx-rtd-theme = "^0.5.1"
sentry-sdk = "^1.5.4"
gunicorn = "^20.0.4"
uvicorn = "0.17.6"
uvloop = "^0.15.2"
httptools = "^0.1.1"
django-extensions = "^3.1.1"
django-cors-headers = "^3.7.0"
aiohttp = "^3.7.4"
drf-yasg = "^1.20.0"
geopy = "^2.1.0"
django-requestlogs = "^0.2.4"
PyYAML = "^5.4.1"
django-q = {extras = ["sentry"], version = "^1.3.9"}
django-dbml = "^0.5.0"
phonenumbers = "^8.12.29"
google-cloud-dialogflow = "^2.7.1"
djangorestframework-simplejwt = "^4.8.0"
boto3 = "^1.20.10"
croniter = "^1.0.15"
PyJWT = {extras = ["crypto"], version = "^2.3.0"}
google-cloud-storage = "^1.43.0"
dialogflow-fulfillment = "^0.4.4"
pyngrok = "^5.1.0"

[tool.poetry.dev-dependencies]
notebook = "^6.2.0"
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
ipdb = "^0.13.4"
flake8-black = "^0.2.1"
coverage = {extras = ["toml"], version = "^5.5"}
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
